
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


typedef int u_short ;
struct TYPE_3__ {scalar_t__ s_addr; } ;
struct TYPE_4__ {int sin_port; TYPE_1__ sin_addr; int sin_family; } ;
struct target {struct target* next; TYPE_2__ sa; } ;
struct in_addr {scalar_t__ s_addr; } ;


 int AF_INET ;
 scalar_t__ INADDR_ANY ;
 scalar_t__ INADDR_NONE ;
 int crash (char*,char*,char*,int) ;
 struct target* cursor ;
 scalar_t__ debug ;
 int defport ;
 char* inet_ntoa (struct in_addr) ;
 struct target* list ;
 struct target* malloc (int) ;
 int memset (struct target*,int ,int) ;
 int printf (char*,char*,int) ;
 int targets ;

int add_target_ip(char *arg, struct in_addr *in, u_short port)
{
 struct target *host;


 if(in->s_addr == INADDR_NONE || in->s_addr == INADDR_ANY)
  return -1;

 if(debug) printf("Adding %s:%u to target list\n", inet_ntoa(*in), port);


 host = malloc(sizeof(struct target));
 if(!host) {
  crash("add_target_ip(%s, %s): malloc(%d) failed",
     arg, inet_ntoa(*in), sizeof(struct target));
 }
 memset(host, 0, sizeof(struct target));


 host->sa.sin_family = AF_INET;
 host->sa.sin_addr.s_addr = in->s_addr;
 host->sa.sin_port = port ? port : defport;

 if(!list) list = host;
 else cursor->next = host;

 cursor = host;
 targets++;

 return 0;
}
